application/backend-api/delete-task-microservice/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-task-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: delete-task
  template:
    metadata:
      labels:
        app: delete-task
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: delete-task
        image: ghcr.io/abhishekg2244/delete-task:latest
        ports:
        - containerPort: 8000
