application/backend-api/delete-task-microservice/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delete-task
spec:
  type: ClusterIP
  selector:
    app: delete-task
  ports:
  - port: 8000
    targetPort: 8000
